# pub-py-pkg

./: .gitignore  .pre-commit-config.yaml  README.md  devnotes.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  main.yml
docs/: conf.py  index.rst  projinfo.rst
src/imppkg/: data.json  harmonic_mean.py  harmonic_mean.pyx  harmony.py  hello.py
test/: test_harmonic_mean.py
