[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/wmelvin/first-python-package
author = Bill Melvin
author_email = "Bill Melvin" <bill@billmelvin.com>
description = This package does nothing but exist.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    termcolor>=1.1.0,<2

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

[options.packages.find]
where = src
exclude =
    test*
