[metadata]
name = pubpypack-harmony-bill-melvin
version = 0.0.4
url = https://github.com/wmelvin/first-python-package
author = Bill Melvin
author_email = "Bill Melvin" <bill@billmelvin.com>
description = Working the exercises in Publishing Python Packages by Dane Hillard
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    termcolor>=1.1.0,<2

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

[tool:pytest]
testpaths = test
addopts = --cov --strict-markers

[coverage:run]
source = imppkg
branch = True

[coverage:paths]
source =
    src/imppkg/
    */site-packages/imppkg/

[coverage:report]
show_missing = True
skip_covered = True

[tox:tox]
isolated_build = True
envlist = py39, py310

[testenv]
deps =
    pytest
    pytest-cov
    pytest-randomly
commands = pytest {posargs}

[testenv:get_my_ip]
skip_install = True
deps = 
    requests
    rich
commands = python -c "import requests, rich; rich.print(requests.get('https://bogusoft.com/ip').text)"

[testenv:typecheck]
deps =
    pytest
    mypy
    types-termcolor
commands = mypy --ignore-missing-imports {postargs:src test}

[mypy]
python_version = 3.9
warn_unused_configs = True
show_error_context = True
pretty = True
namespace_packages = True
check_untyped_defs = True

[testenv:format]
skip_install = True
deps = black
commands = black --check --diff {posargs:src test}

[testenv:reformat]
skip_install = True
deps = black
commands = black {posargs:src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands = flake8 {posargs:src test}

[flake8]
max-line-length = 100

[testenv:docs]
skip_install = True
deps = sphinx
commands = sphinx-build -n -W --keep-going -b html docs/ docs/_build/
